ubiquity (2.1.13) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Don't crash if something races with ubiquity or ubiquity-dm to create
    /var/log/installer (LP: #458806).

  [ Evan Dandrea ]
  * Support the new translated keyboard names in console-setup
    (LP: #127528).
  * Provide an option to determine the keymap from a decision tree.

  [ Mario Limonciello ]
  * Remove another reference to a long dead xserver-xorg debconf question.
  * Don't try reconfiguring LRM, it's been superceded by DKMS based packages.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 20 Jan 2010 17:44:10 +0000

ubiquity (2.1.12) lucid; urgency=low

  [ Colin Watson ]
  * Add osextras.unlink_force, equivalent to 'rm -f', to save on tedious
    exception handling.
  * Only restart debconf-communicator when changing language, not every time
    we switch page.  This speeds up page transitions quite a bit, and should
    incidentally fix LP: #508725 as well.
  * GTK frontend:
    - Check plugin builders as well when adding widgets (setting their
      names, making them callable by the toplevel, etc.).  This fixes
      translations of the language, timezone, and keyboard pages.
  * Fix immediate retranslation when changing language.
  * Add a semaphore to misc.regain_privileges and misc.drop_privileges, so
    that a drop/regain pair always returns to the previous state.
    misc.drop_all_privileges is now more clearly one-way, enforced by an
    assertion.
  * Add a context manager (raised_privileges) and a function decorator
    (raise_privileges) that are equivalent to a
    regain_privileges/drop_privileges pair, but that wrap up the required
    try/finally logic to make it less likely that we'll end up at the wrong
    privilege level by mistake.
  * When attempting to upgrade the installer, only stop debconf-communicator
    once we've determined that we actually have something to upgrade
    (LP: #495175).
  * Require Python 2.6, for the 'with' statement.