@@ -381,7 +381,7 @@ def main(oem_config):
 
     try:
         os.makedirs('/var/log/installer')
-    except OSError:
+    except OSError, e:
         # be happy if someone already created the path
         if e.errno != errno.EEXIST:
             raise
